prometheus/overlays/staging/nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-nodeport
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: server
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9090
      nodePort: 30090
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: server
